# rtl-scanner

./: .gitignore  .gitmodules  Cargo.toml  README.md  todos.json
.cargo/: config
data/: avg.mat  freq.mat  p.mat  psdx.mat  signal.mat  xdft.mat
doc/: gui.txt  ui mocks.drawio
matlab/: scratchpad.m
src/: charts.rs  dsp.rs  fftw.rs  gui.rs  iterators.rs  main.rs  rtl_import.rs  samples.rs  scanner.qml  scanner.rs  scratchpad.m  spectrum.rs  state.rs  support_gfx.rs
src/support_gfx/: mod.rs
src/ui/: mod.rs  spectrum_chart.rs  ui.rs
src/ui/druid/: mod.rs  spectrum.rs
src/ui/imgui/: gui.rs
src/ui/wininit/: main.rs  mod.rs  spectrum_chart.rs
