[package]
name = "rtl-scanner"
version = "0.1.0"
authors = ["Vadim Chekan <kot.begemot@gmail.com>"]
edition = "2018"
keywords = ["radio","dsp","spectrum"]
categories = ["science"]

[dependencies]
rtlsdr = {git="https://github.com/vchekan/rtlsdr-rs", rev="0437c44"}
#soapysdr = "0.1.0"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

druid = {version="0.7", optional=true}
druid-widget-nursery = {git="https://github.com/linebender/druid-widget-nursery", optional=true}
egui = {version = "0.11.0", optional = true }

libc = "0.2"
log = "0.4"
simplelog = "0.7"

# CLI
structopt = "0.3"

futures = "0.3"
crossbeam-channel = "0.4"

[features]
default = ["druid-ui"]
druid-ui = ["druid","druid-widget-nursery"]
imgui-ui = []
egui-ui = ["egui"]